# HeatMyHome-Website

./: CNAME  LICENSE  README.md  cpp.js  cpp.wasm  index.html  index.js  style.css  worker.js
assets/: agile_tariff.csv  placeholder.txt
assets/outside_temps/: lat_50.0_lon_-3.5.csv  lat_50.0_lon_-4.0.csv  lat_50.0_lon_-4.5.csv  lat_50.0_lon_-5.0.csv  lat_50.0_lon_-5.5.csv  lat_50.5_lon_-0.5.csv  lat_50.5_lon_-1.0.csv  lat_50.5_lon_-1.5.csv  lat_50.5_lon_-2.0.csv  lat_50.5_lon_-2.5.csv  lat_50.5_lon_-3.0.csv  lat_50.5_lon_-3.5.csv  lat_50.5_lon_-4.0.csv  lat_50.5_lon_-4.5.csv  lat_50.5_lon_-5.0.csv  lat_50.5_lon_0.0.csv  lat_50.5_lon_0.5.csv  lat_51.0_lon_-0.5.csv  lat_51.0_lon_-1.0.csv  lat_51.0_lon_-1.5.csv  lat_51.0_lon_-2.0.csv  lat_51.0_lon_-2.5.csv  lat_51.0_lon_-3.0.csv  lat_51.0_lon_-3.5.csv  lat_51.0_lon_-4.0.csv  lat_51.0_lon_-4.5.csv  lat_51.0_lon_0.0.csv  lat_51.0_lon_0.5.csv  lat_51.0_lon_1.0.csv  lat_51.0_lon_1.5.csv  lat_51.5_lon_-0.5.csv  lat_51.5_lon_-1.0.csv  lat_51.5_lon_-1.5.csv  lat_51.5_lon_-2.0.csv  lat_51.5_lon_-2.5.csv  lat_51.5_lon_-3.0.csv  (+190 more)
docs/: about-us.html  cpp.wasm  documentation.html  education.html  graphical-output.css  index.css  index.html  index.js  inputs.css  sim_lib.js  sim_lib_bg.wasm  simulate.css  simulate.html  simulate.js  style.css  table.css  worker.js  worker_cpp.js
native-cpp/: heatninja.cpp  heatninja.h  main.cpp
native-rust/: Cargo.toml
native-rust/src/: heat_ninja.rs  lib.rs  main.rs
pkg/: package.json  placeholder.txt  rust_simulator.d.ts  rust_simulator.js  rust_simulator_bg.wasm  rust_simulator_bg.wasm.d.ts
(+690 files in other folders)
