[package]
name = "rust_simulator"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Jackrekirby/Heating-Simulator"
description = "A domestic water and space heating simulator, incorporating solar technologies"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sim_bin"
path = "src/main.rs"

[lib]
name = "sim_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
arrayvec = "0.7.0"
wasm-bindgen = "0.2.78"
rayon = "1.5"
log = "0.4.6"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
]


